# profileportal/src/app/auth/init-models.js
@@ -1,0 +1,26 @@
+var DataTypes = require("sequelize").DataTypes;
+var _roles = require("./roles");
+var _user_roles = require("./user_roles");
+var _users = require("./users");
+
+function initModels(sequelize) {
+  var roles = _roles(sequelize, DataTypes);
+  var user_roles = _user_roles(sequelize, DataTypes);
+  var users = _users(sequelize, DataTypes);
+
+  roles.belongsToMany(users, { as: 'user_id_users', through: user_roles, foreignKey: "role_id", otherKey: "user_id" });
+  users.belongsToMany(roles, { as: 'role_id_roles', through: user_roles, foreignKey: "user_id", otherKey: "role_id" });
+  user_roles.belongsTo(roles, { as: "role", foreignKey: "role_id"});
+  roles.hasMany(user_roles, { as: "user_roles", foreignKey: "role_id"});
+  user_roles.belongsTo(users, { as: "user", foreignKey: "user_id"});
+  users.hasMany(user_roles, { as: "user_roles", foreignKey: "user_id"});
+
+  return {
+    roles,
+    user_roles,
+    users,
+  };
+}
+module.exports = initModels;
+module.exports.initModels = initModels;
+module.exports.default = initModels;
