# profileportal/src/config/routes.js
@@ -1,6 +1,6 @@
 import { Router } from "express";
 import { authenticate } from "../app/middleware/auth";
-import { getAppointments, createAppointment, updateAppointment, deleteAppointment } from "../app/controllers/appointmentController";
+import { getAppointments, createAppointment, getAppointmentById,updateAppointment, deleteAppointment } from "../app/controllers/appointmentController";
 import { getComments, addComment, updateComment, deleteComment } from "../app/controllers/commentController";
 import { getUpdateHistory, addUpdateHistory } from "../app/controllers/updateHistoryController";
 import { loginUser, verifyToken, registerUser } from "../app/controllers/authController";
@@ -30,18 +30,16 @@ module.exports = function (app) {
   // Appointments Routes
   router.get('/appointments', authenticate, pagination, getAppointments);
   router.post('/appointments', authenticate, createAppointment);
+  router.get('/appointments/:appointmentId', authenticate, getAppointmentById);
   router.put('/appointments/:appointmentId', authenticate, updateAppointment);
-  router.delete('/appointments/:appointmentId', authenticate, deleteAppointment);
+  router.delete( '/appointments/:appointmentId', authenticate, deleteAppointment );
+  router.get('/appointments/:appointmentId/history', authenticate, getUpdateHistory);
   
   // Comments Routes
   router.get('/appointments/:appointmentId/comments', authenticate, pagination, getComments);
   router.post('/appointments/:appointmentId/comments', authenticate, addComment);
-  router.put('/appointments/:appointmentId/comments/:commentId', authenticate, updateComment);
-  router.delete('/appointments/:appointmentId/comments/:commentId', authenticate, deleteComment);
-  
-  // Update History Routes
-  router.get('/appointments/:appointmentId/history', authenticate, getUpdateHistory);
-  router.post( '/appointments/:appointmentId/history', authenticate, addUpdateHistory );
+  router.put('/appointments/comments/:commentId', authenticate, checkUserPermission, updateComment);
+  router.delete('/appointments/comments/:commentId', authenticate, checkUserPermission, deleteComment);
   
   // Authentication Routes
   router.post('/auth/login', loginUser);
